@@ -1,17 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST pyScss-1.0.7.tar.gz 48507 RMD160 f06b63f8ccc343dc702d11a9e5c2734727e45fe4 SHA1 4dea9011a4ac4ca3e11f4b33b8d70b61b5009563 SHA256 6903953081e54120ee16cca45e3907ceafa211f658daa91e816d3c2195845364
 DIST pyScss-1.0.8.tar.gz 50947 RMD160 369e84205910b0e0a381935322d63d1e134d91dd SHA1 6b9aba2679a027e4bbaeaed3ad6470280ae273a8 SHA256 b95da8250f01dba09a122de6d4a7fdf59666e728f54304c7223274f62e44ff5b
-EBUILD pyscss-1.0.7.ebuild 794 RMD160 6a975ae676d21b9e9283d5a590beb1f65aedd99e SHA1 ba81ae59969da2a91df348ec58d2d258d5d203f6 SHA256 9008e90a102c0903ead9163172b3ffa8ef49bbfbceb5cb7af8e3d89aca368067
-EBUILD pyscss-1.0.8.ebuild 875 RMD160 f0c4b32840d826569bf024bce20ac9d6ff55878e SHA1 215e5fff8bd0a0e1e6b63790a8c3bbb34c897508 SHA256 45103c4b0b55c1c087da60cb632728229be998c06640cfe2961f7db159a3423a
-MISC ChangeLog 1773 RMD160 ecf181ca1e325ceb431a669fd63ca30b0d1f8408 SHA1 694fca2a7c1b1f1e4af3fcd3d33983c5a9216cbc SHA256 62a84b39a8debbce374a6b0df4d0ed11e9621a4315edff5572f0b8ceebcd046b
+EBUILD pyscss-1.0.8.ebuild 874 RMD160 3ae8978e72ea244b11e89385dba9e616501cc185 SHA1 bde1a459c82cd644d22dd969daf2a77d4fc497bf SHA256 18b8c150c2bf09cdb78c8848fbc6eb67e95c3d67f546aec66f5a201897d48651
+MISC ChangeLog 1881 RMD160 8eb0f555dd55a86bb97b485fd3631544dad58df2 SHA1 2c05c7fa00907ce8c19744f995ab4b5a7192d05c SHA256 47c10ea84931817d946aa002c3f076c211a82170c8314d6dd1923f2902721dfc
 MISC metadata.xml 1224 RMD160 35bb1ac1920d77bb0bcc873d65c02de8915ae185 SHA1 5cedb978598bbc8e4202a659cd807f30628b6c15 SHA256 4312e284f54d4dd2155001f0db89eeefdeaf111e60a07ed8419a80e99c937413
 MISC watch 21 RMD160 728aedf65c0e14a37035e763b6b2a9f8c305eb92 SHA1 09aae1853da047b31b90e7408edc001f3fa2cd34 SHA256 a9021638f368213a649fc01036d6c762dcde9df09063f8bae25b9c03df1f7897
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk35i4UACgkQzJrj3cAXR0lFbACfWMxQLnVYqJ6d4vkHMEhC9ub0
-2P4AnjFr//QD8D+9bqDUriaz57XYSxm4
-=nuaT
+iEYEARECAAYFAk35jE4ACgkQzJrj3cAXR0l7GgCfSlaVsEqhTpYUoAPKLVvOVqCp
+Uf4An0SOewrj9YA2j+BBbGCtWlqDbPcQ
+=CHvx
 -----END PGP SIGNATURE-----
