@@ -6,7 +6,7 @@ test
 http://pypi.python.org/pypi/pyScss/
 MIT
 A Scss compiler for Python
-amd64 ~x86
+amd64 x86
 distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
 test
 
