@@ -1,4 +1,3 @@
-* dev-python/pyscss-1.0.8                    x86 SCHEDULED: <2011-06-16 Thu>
 * media-gfx/seqdiag-0.3.3                    x86 SCHEDULED: <2011-06-16 Thu>
 * dev-python/calabash-0.0.3                  x86 SCHEDULED: <2011-06-17 Fri>
 * dev-python/stencil-0.1                     x86 SCHEDULED: <2011-06-17 Fri>
