@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Jun 2011; James Rowe <jnrowe@gmail.com> -pyscss-1.0.7.ebuild,
+  pyscss-1.0.8.ebuild:
+  Keyworded x86.
+
   16 Jun 2011; James Rowe <jnrowe@gmail.com> pyscss-1.0.8.ebuild:
   Keyworded amd64.
 
